# rust-routerify-aws-lambda-quickstart

./: Cargo.toml  README.md
src/: main.rs
