[package]
name = "rust-routerify-aws-lambda-quickstart"
version = "0.1.0"
authors = ["Sean Pianka <pianka@eml.cc>"]
edition = "2018"

[dependencies]
routerify = "1.1.4"
routerify-cors = "1.1"
hyper = "0.13.6"
tokio = { version = "0.2", features = ["full"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", rev = "c36409c5"}
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = "1.0"
rand = "0.7.3"
url = { version = "2.1.1", features = ["serde"] }